--- a/app/index.html
+++ b/app/index.html
@@ -17,10 +17,8 @@
         <div class="header__logo">QUANTUM</div>
 
         <form class="header__search">
-            <input class="header__search-input" type="text" placeholder="Search goods">
-
+          <input class="header__search-input" type="text" placeholder="Search goods">
           <div class="header__search-dropdown">
-
             <div class="header-select" data-select>
               <div class="header__select-title" data-select-title>CATEGORY</div>
               <div class="header__select-dropdown hidden">
@@ -29,20 +27,28 @@
                 <div class="header__select-dropdown-item" data-select-item="Laptop">Laptop</div>
               </div>
             </div>
-
-            <!-- <select  name="" id="">
-              <option value="">GATEGORY</option>
-              <option value="">Mobile</option>
-              <option value="">Tablet</option>
-              <option value="">Laptop</option>
-            </select> -->
           </div>
-
-            <button class="header__search-button" type="submit"><img src="images/search_icon.png" alt=""></button>
+          <button class="header__search-button" type="submit"><img src="images/search_icon.png" alt=""></button>
         </form>
 
-        <div class="header__buttons"></div>
+        <div class="header__links">
+          <a class="header__link header__link-notify" href="#">
+            <span class="header__link-icon"><img src="images/cart.png" alt="Cart"></span>
+            <span class="header__link-text">2 Items</span>
+          </a>
+          <a class="header__link" href="#">
+            <span class="header__link-icon"><img src="images/like.png" alt="Cart"></span>
+            <span class="header__link-text">Wish List</span>
+          </a>
+          <a class="header__link" href="#">
+            <span class="header__link-icon"><img src="images/user.png" alt="Cart"></span>
+            <span class="header__link-text">Sing in</span>
+          </a>
+        </div>
 
+      </div>
+      <div class="header__nav-wrapper">
+        
       </div>
     </div>
   </header>
